# KaRadio32_fork

./: .cproject  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
Test/Test_vs1053/: Test_vs1053.ino  vs1053_ext.cpp  vs1053_ext.h
Test/test_i2c/: test_i2c.ino
Test/vs1053_pin_test/: vs1053_pin_test.ino
boards/: converter.txt  display_only.csv  gen.sh  gen1.sh  my_std_touch.csv  myka.csv  myka2.csv  radiva1.csv  radiva2.csv  radiva3.csv  radiva4.csv  radiva5.csv  radiva51.csv  radiva52.csv  radiva8.csv  radiva821.csv  radiva830.csv  radiva831.csv  radiva835.csv  radiva84.csv  radiva841.csv  ram_i2s.csv  standard_adb.csv  standard_button.csv  standard_touch.csv  t8.csv  t9.csv  ttgotm.csv  ttgots.csv  vs_only.csv  vs_only2.csv
boards/radiva/: all ok.txt  radiva.lbr  radiva3.brd  radiva3.sch  radiva5.b##  radiva5.brd  radiva5.sch  switch and mute.txt
boards/radiva/gerber/: radiva5.cmp  radiva5.drd  radiva5.dri  (+6 more)
boards/radiva/gerber radiva3/: radiva3.cmp  radiva3.drd  radiva3.dri  radiva3.gpi  radiva3.plc  radiva3.pls  radiva3.sol  radiva3.stc  radiva3.sts
components/audio_renderer/: audio_renderer.c
components/mad/: align.h  bit.c
font/bdf/: 9x18.bdf  9x18_2.bdf  timesbi12.bdf  timesbi18.bdf  timesbi24.bdf
font_tools/: example.txt
font_tools/ttf2bdf/: sample.txt
main/: CMakeLists.txt  ClickEncoder.c  ClickEncoder.old  addon.c  addon.old  addonu8g2.c  addonucg.c  app_main.c  ntp.c  vs1053.c  webclient.c
main/include/: ClickEncoder.h  gpio.h
playlist/: WebStations (1).txt  WebStations.txt
webpage/: favicon  index  logo  script
(+3 files in other folders)
